75 apply visiblity modifiers

--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -24,7 +24,6 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -35,15 +34,18 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion ProjectConfig.kotlinExtensionVersion
     }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
-    implementation(project(":core:util"))
     implementation libs.material3.compose
     implementation libs.activity.compose
     implementation libs.compose.tooling.preview
     implementation libs.coil
-    implementation libs.desugar.jdk
     implementation libs.coroutines.core
     implementation libs.realm.sync
 }
