--- a/core/util/build.gradle
+++ b/core/util/build.gradle
@@ -24,20 +24,32 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion ProjectConfig.kotlinExtensionVersion
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
 dependencies {
     implementation(project(":core:ui"))
+
     implementation libs.activity.compose
     implementation libs.material3.compose
     implementation libs.core.ktx
     implementation libs.firebase.storage
     implementation libs.realm.sync
     implementation libs.coroutines.core
-    implementation libs.desugar.jdk
+    implementation libs.compose.tooling.preview
+    implementation libs.coil
 }
