--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,11 @@ android {
 
 dependencies {
     implementation(project(":core:ui"))
-    implementation(project(":core:ui"))
+    implementation(project(":core:util"))
+    implementation(project(":data:mongo"))
+    implementation(project(":feature:auth"))
+    implementation(project(":feature:home"))
+    implementation(project(":feature:write"))
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
